2007-04-15 Mateusz Loskot <mateusz@loskot.net>

	* autogen.sh: Added detection of glibtoolize as libtool utility name
	  under Mac OS X system.

2007-03-05 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/Makefile.am: enable
	  run of new testcases.

2007-03-05 Carl Anderson <carl.anderson@vadose.org>

	* tests/xmltester/: hole_from_shell.xml, hole_red.xml:
	  New testcases for buffer(0).

2007-02-26 Tom Elwertowski

	* source/inlines.cpp: fix for MingW32 builds.

2007-02-06 Carl Anderson <carl.anderson@vadose.org>

	* source/operation/buffer/SubgraphDepthLocater.cpp
	  (findStabbedSegments):
	  Implement short-circuit to avoid inner defective
	  logic.

2007-02-06 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: Makefile.am, badguy3.xml:
	  Added simplified version of nasty buffer bug test.

2007-02-08 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>

	* configure.in: Allow configure to continue with use_python
	  set to false if a python binary is not found, as per
	  http://sources.redhat.com/automake/automake.html#Python.

2007-02-06 Sandro Santilli <strk@refractions.net>

	* source/index/strtree/STRtree.cpp,
	  source/index/strtree/AbstractNode.cpp,
	  source/index/strtree/ItemBoundable.cpp,
	  source/index/strtree/AbstractSTRtree.cpp,
	  source/index/strtree/SIRtree.cpp,
	  source/headers/geos/index/strtree/AbstractNode.h,
	  source/headers/geos/index/strtree/ItemBoundable.h,
	  source/headers/geos/index/strtree/Boundable.h,
	  source/headers/geos/index/strtree/AbstractSTRtree.h,
	  source/headers/geos/index/strtree/SIRtree.h,
	  source/headers/geos/index/strtree/STRtree.h
	  General refactoring aimed at making the code cleaner
	  to read and maintain; use iterators rather then random
	  accessing containers to allow easy future switch to std::list
	  from std::vector; use a tolerance-based strict weak ordering
	  operator for sorting child boundables in STRtree, this
	  fixes the heisenbug when building with inlines disabled.
