@@ -90,8 +90,8 @@ namespace tut
 			ensure_equals( zcheck, z );
 		}
     }	
-
-    // Test swapped setX calls (see bug #133)
+    
+    // Test not swapped setX/setY calls (see bug #133, fixed)
     template<>
     template<>
     void object::test<2>()
@@ -111,10 +111,9 @@ namespace tut
 		double y = 11;
 		double z = 12;
 
-		// call setY before setX, this seems
-		// to break something in GEOS-3.0.0-rc2
-		GEOSCoordSeq_setY(cs, 0, y);
+        // X, Y, Z
 		GEOSCoordSeq_setX(cs, 0, x);
+		GEOSCoordSeq_setY(cs, 0, y);
 		GEOSCoordSeq_setZ(cs, 0, z);
 
 		double xcheck, ycheck, zcheck;
@@ -127,7 +126,7 @@ namespace tut
 		ensure_equals( zcheck, z );
     }	
 
-    // Test swapped setOrdinate calls (see bug #133)
+    // Test not swapped setOrdinate calls (see bug #133, fixed)
     template<>
     template<>
     void object::test<3>()
@@ -147,8 +146,77 @@ namespace tut
 		double y = 11;
 		double z = 12;
 
-		// call setY before setX, this seems
-		// to break something in GEOS-3.0.0-rc2
+        // X, Y, Z
+		GEOSCoordSeq_setOrdinate(cs, 0, 0, x);
+		GEOSCoordSeq_setOrdinate(cs, 0, 1, y);
+		GEOSCoordSeq_setOrdinate(cs, 0, 2, z);
+
+		double xcheck, ycheck, zcheck;
+		ensure( 0 != GEOSCoordSeq_getOrdinate(cs, 0, 1, &ycheck) );
+		ensure( 0 != GEOSCoordSeq_getOrdinate(cs, 0, 0, &xcheck) );
+		ensure( 0 != GEOSCoordSeq_getOrdinate(cs, 0, 2, &zcheck) );
+
+		ensure_equals( xcheck, x );
+		ensure_equals( ycheck, y );
+		ensure_equals( zcheck, z );
+    }	
+
+    // Test swapped setX calls (see bug #133, fixed)
+    template<>
+    template<>
+    void object::test<4>()
+    {
+		GEOSCoordSequence* cs = GEOSCoordSeq_create(1, 3);
+		
+		unsigned int size;
+		unsigned int dims;
+
+		ensure ( 0 != GEOSCoordSeq_getSize(cs, &size) );
+		ensure_equals( size, 1u );
+
+		ensure ( 0 != GEOSCoordSeq_getDimensions(cs, &dims) );
+		ensure_equals( dims, 3u );
+
+		double x = 10;
+		double y = 11;
+		double z = 12;
+
+        // Y, X, Z
+		GEOSCoordSeq_setY(cs, 0, y);
+		GEOSCoordSeq_setX(cs, 0, x);
+		GEOSCoordSeq_setZ(cs, 0, z);
+
+		double xcheck, ycheck, zcheck;
+		ensure( 0 != GEOSCoordSeq_getY(cs, 0, &ycheck) );
+		ensure( 0 != GEOSCoordSeq_getX(cs, 0, &xcheck) );
+		ensure( 0 != GEOSCoordSeq_getZ(cs, 0, &zcheck) );
+
+		ensure_equals( xcheck, x );
+		ensure_equals( ycheck, y );
+		ensure_equals( zcheck, z );
+    }	
+
+    // Test swapped setOrdinate calls (see bug #133, fixed)
+    template<>
+    template<>
+    void object::test<5>()
+    {
+		GEOSCoordSequence* cs = GEOSCoordSeq_create(1, 3);
+		
+		unsigned int size;
+		unsigned int dims;
+
+		ensure ( 0 != GEOSCoordSeq_getSize(cs, &size) );
+		ensure_equals( size, 1u );
+
+		ensure ( 0 != GEOSCoordSeq_getDimensions(cs, &dims) );
+		ensure_equals( dims, 3u );
+
+		double x = 10;
+		double y = 11;
+		double z = 12;
+
+        // Y, X, Z
 		GEOSCoordSeq_setOrdinate(cs, 0, 1, y);
 		GEOSCoordSeq_setOrdinate(cs, 0, 0, x);
 		GEOSCoordSeq_setOrdinate(cs, 0, 2, z);
